--- a/Contact.html
+++ b/Contact.html
@@ -4,51 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <style>
-        body{
-            background-color: lightgray;
-            text-align: center;
-        }
-    
-        main {
-            width: 50%;
-            margin: 0 auto;
-            padding: 5px;
-            padding-left: 10px;
-            padding-right: 10px;
-            box-sizing: border-box;
-            background-color: white;
-        }
-
-        /* Add a black background color to the top navigation */
-        .topnav {
-        background-color: #333;
-        overflow: hidden;
-        }
-
-        /* Style the links inside the navigation bar */
-        .topnav a {
-        float: left;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        }
-
-        /* Change the color of links on hover */
-        .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-        }
-
-        /* Add a color to the active/current link */
-        .topnav a.active {
-        background-color: #04AA6D;
-        color: white;
-        }
-    </style>
+    <title>Contact</title>
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
     <div class="topnav">
