homepage changed to index

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="Homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Gallery.html">Gallery</a>
         <a class="active" href="Contact.html">Contact</a>
         <a href="About.html">About</a>
