--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="Homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Gallery.html">Gallery</a>
         <a href="Contact.html">Contact</a>
         <a class="active" href="About.html">About</a>
