--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="Homepage.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="Gallery.html">Gallery</a>
         <a href="Contact.html">Contact</a>
         <a href="About.html">About</a>
