--- a/Contact.html
+++ b/Contact.html
@@ -14,8 +14,11 @@
         <a class="active" href="Contact.html">Contact</a>
         <a href="About.html">About</a>
     </div> 
-    <h1>Welcome to the Contact Info! This is a WIP still. . .</h1>
-    
+    <h1>Welcome to the Contact Info!</h1>
+    <h2>Please contact the artist at the below information for business inquiries</h2>
+    <p>
+        Email: <a href="mailto:Arinworke@gmail.com">Arinworke@gmail.com</a>
+    </p>
     
 </body>
 </html>
