lots of work...tired now

--- a/About.html
+++ b/About.html
@@ -10,11 +10,20 @@
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="Gallery.html">Gallery</a>
-        <a href="Contact.html">Contact</a>
-        <a class="active" href="About.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact</a>
+        <a class="active" href="about.html">About</a>
+        <a href="imagecycle.html">Random</a>
+        <a href="masonary.html">Masonary</a>
     </div> 
-    <h1>Welcome to the About Page! This is a WIP still. . .</h1>
+    <h1>Welcome to the About Page! Below you can find a blub from the artist herself!</h1>
+    <main>
+        <p>
+            Hi, I am Arin I'm a Hobbiest based in the United States, currently attending school for a Bachelor of Fine Arts.
+            I specialize in character work and enjoy drawing Original Characters/Fictional Characters. 
+            My Gallery Features Mainly my own Dungeons and Dragons characters.
+        </p>
+    </main>
     
     
 </body>
