--- a/Contact.html
+++ b/Contact.html
@@ -10,9 +10,11 @@
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="Gallery.html">Gallery</a>
-        <a class="active" href="Contact.html">Contact</a>
-        <a href="About.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a class="active" href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="imagecycle.html">Random</a>
+        <a href="masonary.html">Masonary</a>
     </div> 
     <h1>Welcome to the Contact Info!</h1>
     <h2>Please contact the artist at the below information for business inquiries</h2>
