--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 <body>
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
-        <a href="Gallery.html">Gallery</a>
-        <a href="Contact.html">Contact</a>
-        <a href="About.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="imagecycle.html">Random</a>
+        <a href="masonary.html">Masonary</a>
     </div>
     <h1>Blindsonar's Portfolio</h1>
-    
+    <main>
+        <p>
+            This is a portfolio for the artist. Blindsonar. It was written by a third party developer, Jacob Klein.
+
+            To contact the developer about any inquiries or problems with the site, send an email to
+            <a href=mailto:kleinjf@dukes.jmu.edu>kleinjf@dukes.jmu.edu</a>. To contact the artist for
+            commissions or other business inquiries, please see the "<a href="About.html">About</a>" tab.
+        </p>
+    </main>
 </body>
 </html>
