--- a/Gallery.html
+++ b/Gallery.html
@@ -10,35 +10,37 @@
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a class="active" href="Gallery.html">Gallery</a>
-        <a href="Contact.html">Contact</a>
-        <a href="About.html">About</a>
+        <a class="active" href="gallery.html">Gallery</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="imagecycle.html">Random</a>
+        <a href="masonary.html">Masonary</a>
     </div> 
     <h1><b>Welcome to the Gallery!</b></h1>
-    <h2>Here are some of the artist's favorite works</h2>
+    <h2>Here are some of the artist's favorite work of one of their Dungeons and Dragons character, Cameron.</h2>
     <main>
         <div class="row">
             <div class="column">
               <div class="content">
-                <img src="images\Cameron_Austin_Powers.png" alt="cAustinPowers" style="width:100%">
+                <img src="images\Cameron_Austin_Powers.png" alt="cAustinPowers">
                 <h3>Cameron Auston Powers</h3><br>
               </div>
             </div>
             <div class="column">
               <div class="content">
-              <img src="images\cameron_Halloween_Costume.png" alt="cHalloween" style="width:100%">
+              <img src="images\cameron_Halloween_Costume.png" alt="cHalloween">
                 <h3>Cameron Halloween Costume</h3><br>
               </div>
             </div>
             <div class="column">
               <div class="content">
-              <img src="images\Cameron_with_Wand.png" alt="cWand" style="width:100%">
+              <img src="images\Cameron_with_Wand.png" alt="cWand">
                 <h3>Cameron With His Wand</h3><br>
               </div>
             </div>
             <div class="column">
               <div class="content">
-              <img src="images\CameronsPossesson_Lineart.png" alt="cPossesion" style="width:100%">
+              <img src="images\CameronsPossesson_Lineart.png" alt="cPossesion">
                 <h3>Cameron Possessed</h3><br>
               </div>
             </div>
@@ -46,8 +48,8 @@
           </div>
           
           <div class="content">
-            <img src="/w3images/p3.jpg" alt="Etc." style="width:100%">
-            <h3>Some Other Work</h3>
+            <!-- <img src="/w3images/p3.jpg" alt="Etc."> -->
+            <!-- <h3>Some Other Work</h3> -->
           </div>
     </main>
     
