adding mobile support media query

--- a/masonary.html
+++ b/masonary.html
@@ -41,7 +41,15 @@
         <a href="imagecycle.html">Random</a>
         <a class="active" href="masonary.html">Masonary</a>
     </div>
-
+    <main>
+        <p>
+            Here you can find a quick view of all of the artist's latest work, including
+            sketches and other unfinished pieces. Please note, that on smaller devices,
+            such as mobile, this page may not appear as as intended. We recommend
+            viewing on a device at least 500x500 resolution. Check your device's specs
+            to see what resolution you are using!
+        </p>
+    </main>
     <div class="container">
         
         <div class="rightPanel">
