Finished Project first draft

--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,14 @@
     </div>
     <h1>Welcome to the Contact Info!</h1>
     <h2>Please contact the artist at the below information for business inquiries</h2>
-    <p>
-        Email: <a href="mailto:Arinworke@gmail.com">Arinworke@gmail.com</a>
-    </p>
+    <main>
+        <p>
+            Email: <a href="mailto:Arinworke@gmail.com">Arinworke@gmail.com</a><br>
+            Phone: TBD<br>
+            P.O. Box: TBD
+        </p>
+    </main>
+    
 
 </body>
 </html>
