--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
             <a href=mailto:kleinjf@dukes.jmu.edu>kleinjf@dukes.jmu.edu</a>. To contact the artist for
             commissions or other business inquiries, please see the "<a href="About.html">About</a>" tab.
         </p>
+        <div class="content">
+            <div class="light"></div>
+            <div class="fire">
+                <div class="back"></div>
+                <div class="medium"></div>
+                <div class="front"></div>
+            </div>
+            <div class="wood">
+                <div class="stick"></div>
+                <div class="stick"></div>
+                <div class="stick"></div>
+            </div>
     </main>
+    
 </body>
 </html>
