--- a/gallery.html
+++ b/gallery.html
@@ -18,39 +18,77 @@
         <a href="masonary.html">Masonary</a>
     </div>
     <h1><b>Welcome to the Gallery!</b></h1>
-    <h2>Here are some of the artist's favorite work of one of their Dungeons and Dragons character, Cameron.</h2>
+    <h2>Here you can view the artist's renders</h2>
     <main>
+        <h3>This set is Cameron, Blindsonar's Dungeons and Dragons character</h3>
         <div class="row">
             <div class="column">
-              <div class="content">
+              <div>
                 <img src="images\Cameron_Austin_Powers.png" alt="cAustinPowers">
                 <h3>Cameron Auston Powers</h3><br>
               </div>
             </div>
             <div class="column">
-              <div class="content">
+              <div>
               <img src="images\cameron_Halloween_Costume.png" alt="cHalloween">
                 <h3>Cameron Halloween Costume</h3><br>
               </div>
             </div>
             <div class="column">
-              <div class="content">
+              <div>
               <img src="images\Cameron_with_Wand.png" alt="cWand">
                 <h3>Cameron With His Wand</h3><br>
               </div>
             </div>
             <div class="column">
-              <div class="content">
+              <div>
               <img src="images\CameronsPossesson_Lineart.png" alt="cPossesion">
                 <h3>Cameron Possessed</h3><br>
               </div>
             </div>
           <!-- END GRID -->
           </div>
-
-          <div class="content">
-            <!-- <img src="/w3images/p3.jpg" alt="Etc."> -->
-            <!-- <h3>Some Other Work</h3> -->
+    </main>
+    <main>
+        <h3>This set are other Dungeons and Dragons characters</h3>
+        <div class="row">
+            <div class="column">
+              <div>
+                <img src="images\Lola.png" alt="Lola">
+                <h3>Lola</h3><br>
+              </div>
+            </div>
+            <div class="column">
+              <div>
+              <img src="images\Mothica2.png" alt="Mothica">
+                <h3>Mothica</h3><br>
+              </div>
+            </div>
+            <div class="column">
+              <div>
+              <img src="images\preeditheadshot.png" alt="Mothicabust">
+                <h3>Mothica Bust</h3><br>
+              </div>
+            </div>
+            <div class="column">
+              <div>
+              <img src="images\Sidalcea_edit.png" alt="Sidalcea">
+                <h3>Sidalchea</h3><br>
+              </div>
+            </div>
+            <div class="column">
+              <div>
+                <img src="images/Sitting Eil.png" alt="Eil">
+                  <h3>Eil</h3><br>
+                </div>
+              </div>
+            <div class="column">
+             <div>
+                <img src="images\torra.png" alt="torra">
+                  <h3>Torra</h3><br>
+                </div>
+              </div>  
+          <!-- END GRID -->
           </div>
     </main>
 
