--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- update name -->
 </head>
 <body>
@@ -22,7 +22,8 @@
         <p>
             Hi, I am Arin I'm a Hobbiest based in the United States, currently attending school for a Bachelor of Fine Arts.
             I specialize in character work and enjoy drawing Original Characters/Fictional Characters.
-            My Gallery Features Mainly my own Dungeons and Dragons characters.
+            My Gallery Features Mainly my own Dungeons and Dragons characters.<br><br>
+            Checkout my <a href="https://twitter.com/BlindSonarHere">Twitter</a> for all my latest art!
         </p>
     </main>
 
