--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- update name -->
 </head>
 <body>
@@ -24,67 +24,65 @@
         <div class="row">
             <div class="column">
               <div>
-                <img src="images\Cameron_Austin_Powers.png" alt="cAustinPowers">
+                <img src="images/Cameron_Austin_Powers.png" alt="CameronAustinPowers">
                 <h3>Cameron Auston Powers</h3><br>
               </div>
             </div>
             <div class="column">
               <div>
-              <img src="images\cameron_Halloween_Costume.png" alt="cHalloween">
+              <img src="images/cameron_Halloween_Costume.png" alt="CameronHalloween">
                 <h3>Cameron Halloween Costume</h3><br>
               </div>
             </div>
             <div class="column">
               <div>
-              <img src="images\Cameron_with_Wand.png" alt="cWand">
+              <img src="images/Cameron_with_Wand.png" alt="CameronWand">
                 <h3>Cameron With His Wand</h3><br>
               </div>
             </div>
             <div class="column">
               <div>
-              <img src="images\CameronsPossesson_Lineart.png" alt="cPossesion">
+              <img src="images/CameronsPossesson_Lineart.png" alt="CameronPossesion">
                 <h3>Cameron Possessed</h3><br>
               </div>
             </div>
           <!-- END GRID -->
           </div>
-    </main>
-    <main>
-        <h3>This set are other Dungeons and Dragons characters</h3>
+        <h3>this set is of other Dungeons and Dragons characters by the artist</h3>
         <div class="row">
             <div class="column">
               <div>
-                <img src="images\Lola.png" alt="Lola">
+                <img src="images/Lola.png" alt="Lola">
                 <h3>Lola</h3><br>
               </div>
             </div>
             <div class="column">
               <div>
-              <img src="images\Mothica2.png" alt="Mothica">
+              <img src="images/Mothica2.png" alt="Mothica">
                 <h3>Mothica</h3><br>
               </div>
             </div>
             <div class="column">
               <div>
-              <img src="images\preeditheadshot.png" alt="Mothicabust">
+              <img src="images/preeditheadshot.png" alt="Mothicabust">
                 <h3>Mothica Bust</h3><br>
               </div>
             </div>
             <div class="column">
               <div>
-              <img src="images\Sidalcea_edit.png" alt="Sidalcea">
+              <img src="images/Sidalcea_edit.png" alt="Sidalcea">
                 <h3>Sidalchea</h3><br>
               </div>
             </div>
             <div class="column">
               <div>
-                <img src="images/Sitting Eil.png" alt="Eil">
+                <img src="images/Sitting_Eil.png" alt="Eil">
                   <h3>Eil</h3><br>
                 </div>
               </div>
             <div class="column">
              <div>
-                <img src="images\torra.png" alt="torra">
+                <img src="images/torra.png" alt="Torra">
                   <h3>Torra</h3><br>
                 </div>
               </div>  
