--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="topnav">
@@ -25,6 +25,15 @@
             <a href=mailto:kleinjf@dukes.jmu.edu>kleinjf@dukes.jmu.edu</a>. To contact the artist for
             commissions or other business inquiries, please see the "<a href="About.html">About</a>" tab.
         </p>
+        <form>
+            <p>
+                Please login below
+            </p>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value="John"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" value="Doe">
+        </form>
         <div class="content">
             <div class="light"></div>
             <div class="fire">
@@ -37,6 +46,7 @@
                 <div class="stick"></div>
                 <div class="stick"></div>
             </div>
+        </div>
     </main>
     
 </body>
