--- a/masonary.html
+++ b/masonary.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masonary</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         .container {
             display: flex;
@@ -28,7 +28,7 @@
         }
         img {
             width: 200px;
-            border: 1px, black;
+            border: 1px black;
         }
     </style>
 </head>
@@ -53,25 +53,25 @@
     <div class="container">
         
         <div class="rightPanel">
-            <div class="item"><img src="images/askanta_appreciation.png"></div>
-            <div class="item"><img src="images/Cameron_Austin_Powers.png"></div>
-            <div class="item"><img src="images/cameron_Halloween_Costume.png"></div>
-            <div class="item"><img src="images/Cameron_with_Wand.png"></div>
-            <div class="item"><img src="images/cameron-Design_References_1.png"></div>
-            <div class="item"><img src="images/Cheek_Kiss.png"></div>
-            <div class="item"><img src="images/dnd_SESSION_somethin_2nd_with_mothica.png"></div>
-            <div class="item"><img src="images/El_Cameron.png"></div>
-            <div class="item"><img src="images/EverDoodles.png"></div>
-            <div class="item"><img src="images/giftForRidley.png"></div>
-            <div class="item"><img src="images/Lola.png"></div>
-            <div class="item"><img src="images/Mothica2.png"></div>
-            <div class="item"><img src="images/preeditheadshot.png"></div>
-            <div class="item"><img src="images/Sidalcea_edit.png"></div>
-            <div class="item"><img src="images/Sitting Eil.png"></div>
-            <div class="item"><img src="images/Study_1.png"></div>
-            <div class="item"><img src="images/Study_2.png"></div>
-            <div class="item"><img src="images/THe_Boys.png"></div>
-            <div class="item"><img src="images/torra.png"></div>
+            <div class="item"><img src="images/askanta_appreciation.png" alt="AskantaAppreciation"></div>
+            <div class="item"><img src="images/Cameron_Austin_Powers.png" alt="CameronPowers"></div>
+            <div class="item"><img src="images/cameron_Halloween_Costume.png" alt="CameronHalloween"></div>
+            <div class="item"><img src="images/Cameron_with_Wand.png" alt="CameronWand"></div>
+            <div class="item"><img src="images/cameron-Design_References_1.png" alt="CameronReference"></div>
+            <div class="item"><img src="images/Cheek_Kiss.png" alt="CameronKiss"></div>
+            <div class="item"><img src="images/dnd_SESSION_somethin_2nd_with_mothica.png" alt="DnDSession Comic"></div>
+            <div class="item"><img src="images/El_Cameron.png" alt="ElCameron"></div>
+            <div class="item"><img src="images/EverDoodles.png" alt="EverDoodles"></div>
+            <div class="item"><img src="images/giftForRidley.png" alt="RidleyGift"></div>
+            <div class="item"><img src="images/Lola.png" alt="Lola"></div>
+            <div class="item"><img src="images/Mothica2.png" alt="Mothica"></div>
+            <div class="item"><img src="images/preeditheadshot.png" alt="MothicaBust"></div>
+            <div class="item"><img src="images/Sidalcea_edit.png" alt="sidalcea"></div>
+            <div class="item"><img src="images/Sitting_Eil.png" alt="sitting"></div>
+            <div class="item"><img src="images/Study_1.png" alt="study1"></div>
+            <div class="item"><img src="images/Study_2.png" alt="study2"></div>
+            <div class="item"><img src="images/THe_Boys.png" alt="boys"></div>
+            <div class="item"><img src="images/torra.png" alt="torra"></div>
         </div>
 
     </div>
