--- a/test.html
+++ b/test.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
       <main>
           Woah! You found an easter egg. I didn't intend for any users to find this page, I just use it for testing code before integrating it into my site. But since you're here...Can I offer you an egg in this trying time?
           <div>
-              <img src="images/egg.png"></img>
+              <img src="images/egg.png" alt="easteregg">
           </div>
           Click <a href="index.html">here</a> to return to the homepage.
       </main>
