FINAL SUBMISSION FOR REAL

--- a/masonary.html
+++ b/masonary.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masonary</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="96x96">
     <style>
         .container {
             display: flex;
