--- a/report.html
+++ b/report.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="96x96">
 </head>
 <body>
     <h1>Jacob Klein's Project1 Report</h1>
@@ -15,32 +18,54 @@
     </h2>
     <main>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>My site serves an amateur artist with great skill. It is a
+                portfolio for their recent digital art</li>
+            <li>I did not lift any content from other sites. The only images
+                I used are from the artist. I have permission to use all images</li>
+            <li>I have an index file in var/www/html as well as in both my
+                project folder. I have five pages in the official website. (about,
+                contact, gallery, imagecycle, home, and masonary) I also have 
+                two additional hidden pages. This one and a secret one! See if you 
+                can find it and win a prize!</li>
+            <li>All pages have a header describing them!</li>
+            <li>All pages have a nav bar at the top which tells you where you are
+                and where you can go</li>
+            <li>I have resized all of my pages to smartphone, tablet, and desktop sizes.
+                Until you resize it to an unreasonably small size, all elements stay in place.</li>
+            <li>I have declared the favicon in each page. I have declared it in several different
+                sizes to ensure that it works.</li>
+            <li>I have one style sheet which applies to all my pages. Its in a separate folder.</li>
+            <li>The site has plenty of images on many different pages. They all have descriptive
+                alt tags.</li>
+            <li>I have included images, css, and javascript. They are all in their respective folders.</li>
+            <li>I did not use any libraries or frameworks as far as I understand. My knowledge of
+                what a framework is is limited, but I did my best to ensure I didn't have any.</li>
+            <li>All pages validate, I double checked them before pushing.</li>
+            <li>I used centering quite a bit because it seemed to work better in my case. I'd love
+                to learn how to use the left/right more. I tried it with my animation on the homepage.
+                The animation slides around and isn't quite center so I don't think I did it right.</li>
+            <li>The only time text bleeds out of its containing box is when the page is unrealistically
+                small. Such as sub 100px width. I didn't think this was a problem, but if it is I could
+                solve it with either zscores or better formatting.</li>
+            <li>I used the recommended font faces for heading and paragraphs.</li>
+            <li>I included the form on the homepage as a sort of login system. At the moment it doesn't
+                do anything, as instructed.</li>
+            <li>On the 'about' page, the site links to the artist's twitter.</li>
+            <li>My code is well organized, comments are placed to help navigate through the code, it
+                is indented appropriately. I have never used kebab-case before, but I believe I did.</li>
+            <li>I made a CSS animation on the homepage of a green fire.</li>
+            <li>My site is stored in a git repository and I have shared it with hcientist. It said I
+                sent an invitation so I assume it needed to be accepted.</li>
+            <li>All my files are lowercase and written only with alphanumeric characters. This is excluding
+                the images as I didn't think they were considered files in this case.</li>
+            <li>Yes. Dr. Stewart helped me set this up. It redirrects to https from http for my project
+                (just not my blog, yet).</li>
+            <li>See above ^</li>
+            <li>See above ^</li>
+            <li>Unfortunately I got hung up with deployment issues so most of my work, while I was
+                trying to figure out the issues, was done locally. This means that the backlog isn't
+                very long in github. Whoops.</li>
+            <li>That's what this is!!!</li>
         </ol> 
     </main>
 </body>
