--- a/imagecycle.html
+++ b/imagecycle.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="96x96">
 </head>
 <body onload="buildImage();">
     <script src="js/script.js"></script>
