--- a/test.html
+++ b/test.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>Test</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="96x96">
 </head>
 <body>
       <main>
