trying to make favicon appear on mozilla

--- a/report.html
+++ b/report.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" />
 </head>
 <body>
     <h1>Jacob Klein's Project1 Report</h1>
