--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="images/Askanta_Die.png" sizes="96x96">
-    <!-- update name -->
+    <link rel="icon" type="image/png" href="images/Askanta_Die.png" />
 </head>
 <body>
     <div class="topnav">
